Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22069

UBSAN: runtime error: member access within null pointer of type 'MY_DIR_HANDLE' in mysys/my_lib.c

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
    • 10.2.32, 10.3.23, 10.4.13, 10.5.3
    • Server
    • None

    Description

          #0 0x3533f3d in my_dir /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../mysys/my_lib.c:186:20
          #1 0x160a3dd in mysql_rm_db_internal(THD*, char*, bool, bool) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_db.cc:861:15
          #2 0x1609d9c in mysql_rm_db(THD*, char*, bool) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_db.cc:1071:10
          #3 0x1719434 in mysql_execute_command(THD*) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_parse.cc:4735:10
          #4 0x17eb46d in Prepared_statement::execute(String*, bool) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_prepare.cc:4837:14
          #5 0x17e067a in Prepared_statement::execute_loop(String*, bool, unsigned char*, unsigned char*) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_prepare.cc:4266:10
          #6 0x17dfe8e in mysql_sql_stmt_execute(THD*) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_prepare.cc:3374:16
          #7 0x170ae11 in mysql_execute_command(THD*) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_parse.cc:3547:5
          #8 0x16fc816 in mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_parse.cc:7739:18
          #9 0x16f3a09 in handle_bootstrap_impl(THD*) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_parse.cc:1049:5
          #10 0x16f2748 in do_handle_bootstrap(THD*) /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_parse.cc:1101:3
          #11 0x16f2480 in handle_bootstrap /home/kevg/work/m/bb-10.2-kevgs/build_ubsan/../sql/sql_parse.cc:1084:3
          #12 0x7fd89f761668 in start_thread /build/glibc-t7JzpG/glibc-2.30/nptl/pthread_create.c:479:8
          #13 0x7fd89ec2a322 in clone /build/glibc-t7JzpG/glibc-2.30/misc/../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Activity

          People

            kevg Eugene Kosov (Inactive)
            kevg Eugene Kosov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.