MDEV-22069 UBSAN: runtime error: member access within null pointer of type 'MY_DIR_HANDLE' in mysys/my_lib.c

This is an error handling bug. When opendir() fails dirh is NULL and
we shouldn't try to free it.